--- a/app/assets/stylesheets/refresh/_layout.scss
+++ b/app/assets/stylesheets/refresh/_layout.scss
@@ -5,7 +5,7 @@ body{
   //
   @extend .full-background;
   background-position: 0px 0px;
-  background-image: url('https://drqkr2smv75b.cloudfront.net/www/images/ocean1.jpg');
+  background-image: url('https://drqkr2smv75b.cloudfront.net/www/images/waves1.jpg');
   //color: $white;
   
   h1,h2,h3,h4,h5,h6{
