--- a/app/views/about/cal.html.erb
+++ b/app/views/about/cal.html.erb
@@ -2,12 +2,13 @@
   <div class="small-12 large-12 columns">
     <h2><%= page_title %></h2>
     <hr />
+    <img class="home_images" style="float: left; margin-right: 15px;" src="https://drqkr2smv75b.cloudfront.net/www/images/cal_bio.jpg" />
     <p>
       Cal is the founder of ReFresh Leadership and Coaching Networks. He’s a pastor at heart with a huge passion to see 
       other pastors and leaders reach and maintain their spiritual and emotional health. His desire is to come alongside 
       to encourage, equip and serve.
     </p>
-
+    
     <p>
       For 30 years Cal has served on the senior leadership teams at <a target="_blank" href="http://wearenorthwood.com/">Northwood Church (N. Charleston, SC)</a>, 
       <a target="_blank" href="http://www.bellevuechristian.com/">Bellevue Christian Center (Omaha, NE)</a>, and the 
