--- a/app/views/about/ron.html.erb
+++ b/app/views/about/ron.html.erb
@@ -2,13 +2,20 @@
   <div class="small-12 large-12 columns">
     <h2><%= page_title %></h2>
     <hr />
+    <img class="home_images" style="float: left; margin-right: 15px;" src="https://drqkr2smv75b.cloudfront.net/www/images/ron_bio_sm.jpg" />
     <p>
       Ron Sylvia is the founding and lead pastor of <a href="http://thesprings.net/" target="_blank"> Church at The Springs</a> in Ocala, Florida, and Director of NEXT 
-      Churches. The Springs began in an office building in 1994 with only 21 people and now with two locations averages 
+      Churches. 
+    </p>
+    <p>  
+      The Springs began in an office building in 1994 with only 21 people and now with two locations averages 
       over 3,500 in weekly attendance. While leading a fast-growing church, Ron learned firsthand the value of 
       mentoring & coaching. As a result, Ron started NEXT Churches, an organization that equips lead pastors 
       nationwide. Ron and the NEXT team have coached hundreds of church planters & pastors to start & lead healthy 
-      churches. Ron also leads networks as one of the few certified in the well-known Tom Paterson Strategic 
+      churches. 
+    </p>
+    <p>
+      Ron also leads networks as one of the few certified in the well-known Tom Paterson Strategic 
       Planning Process, using the process to help pastors think & act strategically in the local church. Ron is the 
       author of Launching a Purpose Driven Church conference curriculum and authored his story and methods in the book, 
       Starting New Churches on Purpose.
