--- a/app/views/layouts/admin/parts/_nav.html.erb
+++ b/app/views/layouts/admin/parts/_nav.html.erb
@@ -1,6 +1,7 @@
 <% if current_user %>
-<div style="margin-top: -25px;" class="icon-bar five-up">
+<div style="margin-top: -25px;" class="icon-bar six-up">
   <a class="item" href="/admin/">Admin Home</a>
+  <a class="item" href="/admin/contacts">Messages</a>
   <a class="item" href="/admin/nuggets">Nuggets</a>
   <a class="item" href="/admin/users">Users</a>
   <a class="item" href="/admin/#appointments">Appointments</a>
