--- a/app/views/layouts/parts/app/_head.html.erb
+++ b/app/views/layouts/parts/app/_head.html.erb
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="ReFresh Ministries">
+    <meta name="msvalidate.01" content="96A642B9DF4B66510D77203D2FD932D6" />
     <link href="https://drqkr2smv75b.cloudfront.net/shared/images/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon"/>
     <link rel="apple-touch-icon" href="https://drqkr2smv75b.cloudfront.net/shared/images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="76x76" href="https://drqkr2smv75b.cloudfront.net/shared/images/apple-touch-icon-76x76.png">
