--- a/app/views/barnabas/index.html.erb
+++ b/app/views/barnabas/index.html.erb
@@ -5,6 +5,7 @@
     <p>
       After 30 years of ministry I can tell you many things NOT to do… They far outweigh the things I could tell you to do in order to finish strong. However, at the top of that list of things to do is take care of your family. That starts by making your spouse a priority! It is heartbreaking today to see pastors lose their marriage while trying to bring hope to others.
     </p>
+    <img style="float: right; margin-left: 15px; height: 50%;" class="home_images rotate_right" src='https://drqkr2smv75b.cloudfront.net/www/images/CalandPastor_SM.jpg' />
     <p>
       That’s what the Barnabas Experience is all about. Ministry is all consuming and in today’s culture, there are no boundaries that define personal life and ministry life. Sometimes you just need to ‘get away’ for a weekend and re-focus.
     </p>
