--- a/app/views/layouts/admin/parts/_foot.html.erb
+++ b/app/views/layouts/admin/parts/_foot.html.erb
@@ -2,15 +2,15 @@
       <footer class='row'>
         <div class='large-12 columns'>
           <div class='row'>
-            <div class='large-6 small-12 columns'>
-              <p>
+            <div class='large-12 small-12 columns'>
+              <p class="text-center">
                 Copyright &copy;<%= Time.new.year %> ReFresh Ministries - All Rights Reserved
               </p>
             </div>
-            <div class='large-6 small-12 columns'>
+            <div style="display: none;" id="nav_top_container" class='large-12 small-12 columns'>
               <ul class='inline-list right'>
                 <li>
-                  <a id="nav_top" href='#top'>Top of Page</a>
+                  &nbsp;
                 </li>
               </ul>
             </div>
@@ -22,8 +22,13 @@
     <script type="text/javascript">
       $(document).ready(function(){
         var body = $('body').height();
-        var bodyminus = body - 158;
+        var bodyminus = body - 81;
         $('#main').css({'min-height' : bodyminus});
+        // Front Page Contact Form
+        $("#btn_contact").click(function(){
+          //$('#contact_form').submit();
+          alert('This form isn\'t working yet.');
+        })
       });
       $(document).foundation();
     </script>
