--- a/app/views/layouts/parts/home/_head.html.erb
+++ b/app/views/layouts/parts/home/_head.html.erb
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="ReFresh Ministries">
     <meta name="msvalidate.01" content="96A642B9DF4B66510D77203D2FD932D6" />
+    <meta name="google-site-verification" content="I2RN3HyLIZr1yu6Kw0VuD7hEGm6vCPz0SIqmPvkbkqM" />
     <link href="https://drqkr2smv75b.cloudfront.net/shared/images/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon"/>
     <link rel="apple-touch-icon" href="https://drqkr2smv75b.cloudfront.net/shared/images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="76x76" href="https://drqkr2smv75b.cloudfront.net/shared/images/apple-touch-icon-76x76.png">
