--- a/app/views/admin/nuggets/_form.html.erb
+++ b/app/views/admin/nuggets/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :body %><br>
-    <%= f.text_area :body %>
+    <%= f.text_area :body, style:"min-height: 400px;" %>
   </div>
   <div class="actions">
     <%= f.submit :class => "button" %>
