--- a/app/views/admin/contacts/new.html.erb
+++ b/app/views/admin/contacts/new.html.erb
@@ -2,6 +2,6 @@
   <div class="small-12 large-12 columns">
     <h2><%= page_title %></h2>
     <hr />    
-    <%= render 'form' %>
+    <%= render 'foundation_form' %>
   </div>
 </div>
