--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -148,7 +148,8 @@
                   </div>
                   <div class="large-12 columns">
                     <label>
-                      What is the color of the word <span class="rf-green">ReFresh</span> in our logo at the top of the screen?
+                      What is the color of the word <span class="rf-green">ReFresh</span> in our logo at the top of the screen? 
+                      <span data-tooltip aria-haspopup="true" class="has-tip" title="We use this question to try to make sure you're not a robot.">Why do we ask this?</span>
                       <input name="challenge" type="text">
                     </label>
                   </div>
