Begin mailer work and new home image.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <div id="mission">
     <div class="row">
       <div class='small-12 columns'>
-        <img src="https://drqkr2smv75b.cloudfront.net/www/images/frontpage_healthy5.png" />
+        <img src="https://s3-us-west-1.amazonaws.com/refresh-ministries.org/www/images/frontpage_healthy7.png" />
       </div>
     </div>
   </div>
