--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,20 @@
 <div id="container">
-  <div id="mission">
+  <div id="healthy_banner">
     <div class="row">
-      <div class='small-12 columns'>
-        <img src="https://s3-us-west-1.amazonaws.com/refresh-ministries.org/www/images/frontpage_healthy7.png" />
+      <div class="small-12 columns text-center">
+        <img src="https://s3-us-west-1.amazonaws.com/refresh-ministries.org/www/images/Helathy_Banner.png">
       </div>
     </div>
   </div>
   
+  <div id="mission">
+    <div class="row">
+      <div class='small-12 columns'>
+
+      </div>
+    </div>
+  </div>
+
   <div id="endorsement">
     <div class="row">
       <div class='small-12 columns'>
@@ -14,7 +22,7 @@
       </div>
     </div>
   </div>
-  
+
   <div id="coaching">
     <div class="row">
       <div class='small-12 columns'>
@@ -31,7 +39,7 @@
       </div>
     </div>
   </div>
-  
+
   <div id="barnabas">
     <div class="row">
       <div class='small-12 columns'>
@@ -54,7 +62,7 @@
       </div>
     </div>
   </div>
-  
+
   <div id="leadership">
     <div class="row">
       <div class='small-12 columns'>
@@ -77,7 +85,6 @@
       </div>
     </div>
   </div>
-  
 
   <div id="contact">
     <div class='row'>
