--- a/app/views/layouts/parts/app/_foot.html.erb
+++ b/app/views/layouts/parts/app/_foot.html.erb
@@ -24,11 +24,9 @@
         var body = $('body').height();
         var bodyminus = body - 81;
         $('#main').css({'min-height' : bodyminus});
-        // Front Page Contact Form
-        $("#btn_contact").click(function(){
-          //$('#contact_form').submit();
-          alert('This form isn\'t working yet.');
-        })
+        $('#healthy_banner').fadeIn(1500, function(){
+          $("#mission").slideDown(1000);
+        });
       });
       $(document).foundation();
     </script>
