--- a/app/views/message_mailer/thankyou_email.text.erb
+++ b/app/views/message_mailer/thankyou_email.text.erb
@@ -1,5 +1,7 @@
-New Message For ReFresh Ministries
-==================================
+Thank You For Contacting ReFresh Ministries
+===========================================
+
+You sent us this information:
 
 First Name: <%= @user.first_name %>
 
