--- a/app/views/layouts/parts/app/_head.html.erb
+++ b/app/views/layouts/parts/app/_head.html.erb
@@ -2,19 +2,37 @@
 <!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
 <html class="no-js" lang="en" >
   <head>
+    <!-- Basic Website Meta Information -->  
+    <title>ReFresh <%= head_page_title %></title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="ReFresh Ministries">
     <meta name="msvalidate.01" content="96A642B9DF4B66510D77203D2FD932D6" />
     <meta name="google-site-verification" content="I2RN3HyLIZr1yu6Kw0VuD7hEGm6vCPz0SIqmPvkbkqM" />
+    <meta name="description" content="Through hands-on coaching and exhortation, ReFresh networks provide an uplifting opportunity for pastors and their wives to become healthy again... To believe again... To be passionate again... Recognize they are not alone!" />
     <link href="https://drqkr2smv75b.cloudfront.net/shared/images/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon"/>
+    <link rel="canonical" href="<%= request.original_url %>" />
+    <!-- End Basic Website Meta Information -->  
+
+    <!-- Apple Application Meta Information -->    
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="ReFresh Ministries">
     <link rel="apple-touch-icon" href="https://drqkr2smv75b.cloudfront.net/shared/images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="76x76" href="https://drqkr2smv75b.cloudfront.net/shared/images/apple-touch-icon-76x76.png">
     <link rel="apple-touch-icon" sizes="120x120" href="https://drqkr2smv75b.cloudfront.net/shared/images/apple-touch-icon-120x120.png">
     <link rel="apple-touch-icon" sizes="152x152" href="https://drqkr2smv75b.cloudfront.net/shared/images/apple-touch-icon-152x152.png">
-    <title>ReFresh <%= head_page_title %></title>
+    <!-- End Apple Application Meta Information --> 
+    
+    <!-- OpenGraph Meta Information -->
+    <meta property="og:title" content="ReFresh Ministries <%= head_page_title %>" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="ReFresh Ministries" />
+    <meta property="og:image" content="https://drqkr2smv75b.cloudfront.net/shared/images/ReFresh_Logo_SM.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Through hands-on coaching and exhortation, ReFresh networks provide an uplifting opportunity for pastors and their wives to become healthy again... To believe again... To be passionate again... Recognize they are not alone!" />   
+    <meta property="og:url" content="<%= request.original_url %>" />
+    <!-- End OpenGraph Meta Information --> 
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'vendor/modernizr' %>
     <%= csrf_meta_tags %>
