--- a/app/views/layouts/parts/home/_foot.html.erb
+++ b/app/views/layouts/parts/home/_foot.html.erb
@@ -24,8 +24,12 @@
         var body = $('body').height();
         var bodyminus = body - 81;
         $('#main').css({'min-height' : bodyminus});
+        $('#healthy_banner').fadeIn(1500, function(){
+          $("#mission").slideDown(1000);
+        });
       });
       $(document).foundation();
     </script>
+    <%= render "layouts/admin/parts/tinymce" %>
   </body>
 </html>
