--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -156,7 +156,7 @@
                   <div class="large-12 columns">
                     <label>
                       What is the color of the word <span class="rf-green">ReFresh</span> in our logo at the top of the screen? 
-                      <span data-tooltip aria-haspopup="true" class="has-tip" title="We use this question to try to make sure you're not a robot.">Why do we ask this?</span>
+                      <span data-tooltip aria-haspopup="true" class="has-tip" title="We use this question to try to make sure the contact form is being submitted by a person.">Why do we ask this?</span>
                       <input name="challenge" type="text">
                     </label>
                   </div>
