--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -2,14 +2,29 @@
 <!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
 <html class="no-js" lang="en" >
   <head>
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
     <link rel="stylesheet" href="https://s3-us-west-1.amazonaws.com/refresh-ministries.org/shared/js/foundation-5.5.0/css/normalize.css">
     <link rel="stylesheet" href="https://s3-us-west-1.amazonaws.com/refresh-ministries.org/shared/js/foundation-5.5.0/css/foundation.min.css">
     <style>
+      .rf-gray{
+        color: #595758;
+      }
+      .rf-green{
+        color: #3AB54A;
+      }
       body{
         background-color: #595758;
-        color: white;
+        color: #FFFFFF;
+      }
+      a, a:hover, a:active, a:visited{
+        color: #3AB54A;
+      }
+      a:hover{
+        text-decoration: underline;
+      }
+      h1,h2,h3,h4,h5,h6{
+        color: #FFFFFF;
       }
       
       .row{
