--- a/app/views/about/refresh.html.erb
+++ b/app/views/about/refresh.html.erb
@@ -1,7 +1,6 @@
+<h1 class="top_h1"><%= page_title %></h1>
 <div class="row">
   <div class="small-12 large-12 columns">
-    <h2><%= page_title %></h2>
-    <hr />
     <p>Pastors today feel the weight of responsibility in leading their churches. Amidst the typical leadership pressures of casting vision, setting priorities and managing interpersonal relationships, pastors also must discern God’s message for their teaching and provide support for the hurting.</p>
     <p>This weight brings a tremendous amount of discouragement and in many cases, isolation. In today's world of technology driven expectations, a large number of pastors feel as though they can't live up to their calling. In fact, many pastors today are actually doubting that they are even called to ministry.</p>
     <p>On top of these ministry expectations rests the pressure of nurturing, leading and providing for their family. Unfortunately, the families of many pastors today are hurting with no where and no one to turn to for help. As a result, we are losing 1700 pastors per month to discouragement, burnout and loneliness.</p>
