--- a/app/views/coaching/index.html.erb
+++ b/app/views/coaching/index.html.erb
@@ -1,7 +1,6 @@
+<h1 class="top_h1"><%= page_title %></h1>
 <div class="row">
   <div class="small-12 large-12 columns">
-    <h2><%= page_title %></h2>
-    <hr />    
     <h3>Here is the reality for pastors in today's world:</h3>
     <ul>
       <li>71% have felt burned out or depressed…</li>
