--- a/app/views/giving/index.html.erb
+++ b/app/views/giving/index.html.erb
@@ -1,7 +1,6 @@
+<h1 class="top_h1"><%= page_title %></h1>
 <div class="row">
   <div class="small-12 large-12 columns">
-    <h2><%= page_title %></h2>
-    <hr />
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce mattis venenatis dui et ultricies. In at quam nec nulla mollis consectetur. Duis elementum fringilla elementum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur eget augue quis augue pharetra sodales. Donec sed enim id dolor sagittis consectetur. Praesent suscipit mauris sed sapien pretium rhoncus.</p>
 
     <p>Vivamus tristique molestie nunc eget placerat. Ut eu tristique enim. Donec sapien massa, faucibus id rutrum et, venenatis eget arcu. Pellentesque vel eros risus. Nullam eu eros nec velit consequat tempor. Morbi vehicula fringilla leo a rhoncus. Vestibulum at mauris in massa laoreet interdum. In ullamcorper, sem in pharetra efficitur, leo nulla bibendum mauris, nec aliquam leo risus faucibus metus. In interdum facilisis ligula nec viverra. Sed id massa posuere lectus luctus varius at et erat. Vestibulum vehicula est magna. Nullam laoreet vehicula odio vel aliquet. Curabitur ut arcu metus.</p>
