--- a/app/views/leadership/nugget.html.erb
+++ b/app/views/leadership/nugget.html.erb
@@ -1,8 +1,7 @@
+<h1 class="top_h1"><%= @nugget.title %></h1>
 <div class="row">
   <div class="small-12 large-12 columns">
     <article class="nugget">
-      <h2><%= @nugget.title %></h2>
-      <hr />
       <%= raw @nugget.body %>
       <p><span class="rf-green">Posted:</span> <%= @nugget.created_at %></p>
     </article>
