--- a/app/assets/stylesheets/refresh/_classes.scss
+++ b/app/assets/stylesheets/refresh/_classes.scss
@@ -108,6 +108,8 @@
 }
 
 .home_images{
-  box-shadow: 3px 3px 5px rgba(0,0,0,0.4);
-  border: 7px solid $white;
+  @include photo_style($shadow-color: $black);
+}
+.home_images:hover{
+  @include photo_style_hover($shadow-color: $rf-green);
 }
