--- a/app/assets/stylesheets/refresh/_mobile.css.scss
+++ b/app/assets/stylesheets/refresh/_mobile.css.scss
@@ -1,7 +1,29 @@
+//
+// Font Rems
+//
+$toph1-rem: 20;
+
+//
 // Small screens
-/* Define mobile styles */
+//
 @media only screen {
   body{
+    #main{
+      background: rgba(255,255,255,0.85);
+      padding-bottom: 25px;
+      color: $rf-gray;
+      
+      h1.top_h1{
+        color: $white;
+        margin: 0px 0px 10px 0px;
+        background-color: $rf-green;
+        font-size: rem-calc($toph1-rem);
+        text-align: center;
+        @include emboss;
+      }
+      
+    }
+    
     .home_images{
       margin-bottom: 15px;
     }
@@ -29,17 +51,26 @@
     }
   }
 }
-/* max-width 640px, mobile-only styles, use when QAing mobile issues */ 
-@media only screen and (max-width: 40em){} 
+//
 // Medium screens 
+//
 /* min-width 641px, medium screens */ 
-@media only screen and (min-width: 40.063em){}
-/* min-width 641px and max-width 1024px, use when QAing tablet-only issues */ 
-@media only screen and (min-width: 40.063em) and (max-width: 64em){}
+@media only screen and (min-width: 40.063em){
+  
+}
+//
 // Large screens
+//
 /* min-width 1025px, large screens */ 
 @media only screen and (min-width: 64.063em){
   body{
+    #main{
+      h1.top_h1{
+        font-size: rem-calc($toph1-rem + 20);
+        margin: 0px 0px 25px 0px;
+      }
+    }
+    
     //
     // Front Page Styling
     //
@@ -68,14 +99,3 @@
     }
   }
 }
-
-/* min-width 1025px and max-width 1440px, use when QAing large screen-only issues */
-@media only screen and (min-width: 64.063em) and (max-width: 90em){}
-// XLarge screens 
-/* min-width 1441px, xlarge screens */ 
-@media only screen and (min-width: 90.063em){}
-/* min-width 1441px and max-width 1920px, use when QAing xlarge screen-only issues */
-@media only screen and (min-width: 90.063em) and (max-width: 120em){}
-// XXLarge screens 
-/* min-width 1921px, xxlarge screens */
-@media only screen and (min-width: 120.063em){}
