--- a/app/views/about/cal.html.erb
+++ b/app/views/about/cal.html.erb
@@ -1,8 +1,9 @@
+<h1 class="top_h1"><%= page_title %></h1>
 <div class="row">
-  <div class="small-12 large-12 columns">
-    <h2><%= page_title %></h2>
-    <hr />
-    <img class="home_images" style="float: left; margin-right: 15px;" src="https://drqkr2smv75b.cloudfront.net/www/images/cal_bio.jpg" />
+  <div class="small-12 large-4 columns text-center">
+    <img id="cal_bio_img" src="<%= aws_link('cloudfront') %>/www/images/cal_bio.jpg" />
+  </div>
+  <div class="small-12 large-8 columns">
     <p>
       Cal is the founder of ReFresh Leadership and Coaching Networks. He’s a pastor at heart with a huge passion to see 
       other pastors and leaders reach and maintain their spiritual and emotional health. His desire is to come alongside 
