--- a/app/views/about/ron.html.erb
+++ b/app/views/about/ron.html.erb
@@ -1,8 +1,9 @@
+<h1 class="top_h1"><%= page_title %></h1>
 <div class="row">
-  <div class="small-12 large-12 columns">
-    <h2><%= page_title %></h2>
-    <hr />
-    <img class="home_images" style="float: left; margin-right: 15px;" src="https://drqkr2smv75b.cloudfront.net/www/images/ron_bio_sm.jpg" />
+  <div class="small-12 large-4 columns text-center">
+    <img id="ron_bio_img" src="<%= aws_link('cloudfront') %>/www/images/ron_bio_sm.jpg" />
+  </div>
+  <div class="small-12 large-8 columns">
     <p>
       Ron Sylvia is the founding and lead pastor of <a href="http://thesprings.net/" target="_blank"> Church at The Springs</a> in Ocala, Florida, and Director of NEXT 
       Churches. 
