--- a/app/views/leadership/nuggets.html.erb
+++ b/app/views/leadership/nuggets.html.erb
@@ -1,11 +1,10 @@
+<% @nuggets.each do |nugget| %>
+<h1 class="top_h1"><%= nugget.title %></h1>
 <div class="row">
   <div class="small-12 large-12 columns">
-    <% @nuggets.each do |nugget| %>
     <article class="nugget">
-      <h2><%= nugget.title %></h2>
-      <hr />
       <%= raw nugget.body %>
     </article>
-    <% end %>
   </div>
 </div>
+<% end %>
