SASS Library Update

--- a/app/assets/stylesheets/lib/_classes.css.scss
+++ b/app/assets/stylesheets/lib/_classes.css.scss
@@ -1,9 +1,10 @@
 @import "classes/pnc";
+@import "classes/animate";
 @import "classes/links";
 @import "classes/navbars";
 @import "classes/tables";
 @import "classes/alerts";
-//@import "classes/panels";
+@import "classes/panels";
 @import "classes/buttons";
 @import "classes/alignment";
 @import "classes/border-radius";
