--- a/app/assets/stylesheets/loader.scss
+++ b/app/assets/stylesheets/loader.scss
@@ -1,4 +1,5 @@
 // Variables
+@import "lib/application_colors";
 @import "lib/variables";
 @import "lib/prelib-functions";
 @import "lib/prelib-mixins";
@@ -9,6 +10,7 @@
 
 // Foundation
 @import "lib/variables/foundation/foundation_libvars";
+//@import url('https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css');
 
 // Mixins, Functions
 @import "lib/postlib-functions";
