--- a/app/assets/stylesheets/lib/_application_colors.scss
+++ b/app/assets/stylesheets/lib/_application_colors.scss
@@ -20,6 +20,7 @@ $sk-teal_dark: darken($sk-teal, 10%);
 $pnc-blue: #003592;
 $pnc-green: #77B800;
 $pnc-gray: #A5ACB0;
+$pnc-orange: #E56425;
 
 //
 // Application Colors
