--- a/app/views/message_mailer/contact_email.html.erb
+++ b/app/views/message_mailer/contact_email.html.erb
@@ -434,7 +434,7 @@
                       <p style="color: #222222; font-family: 'Helvetica', 'Arial', sans-serif; font-weight: normal; text-align: left; line-height: 19px; font-size: 14px; margin: 0 0 10px; padding: 0;" align="left">
                         Telephone: <a href="tel:<%= @user.telephone %>" style="color: #3AB54A !important; text-decoration: none;"><%= @user.telephone %></a>
                       </p>
-                      <%= raw @user.memo %>
+                      <%= raw @user.telephone %>
                       </td>
                       <td class="expander" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; visibility: hidden; width: 0px; color: #222222; font-family: 'Helvetica', 'Arial', sans-serif; font-weight: normal; line-height: 19px; font-size: 14px; margin: 0; padding: 0;" align="left" valign="top"></td>
                     </tr>
@@ -451,13 +451,13 @@
                       <hr style="color: #d9d9d9; height: 1px; background: #d9d9d9; border: none;" />
                       <table style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; padding: 0;">
                         <tr style="vertical-align: top; text-align: left; padding: 0;" align="left">
-                          <td style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; color: #222222; font-family: 'Helvetica', 'Arial', sans-serif; font-weight: normal; line-height: 19px; font-size: 14px; margin: 0; padding: 5px;" align="left" valign="top"><a href="http://www.refresh-ministries.org/coaching" style="color: #3AB54A !important; text-decoration: none;">Coaching »</a></td>
+                          <td style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; color: #222222; font-family: 'Helvetica', 'Arial', sans-serif; font-weight: normal; line-height: 19px; font-size: 14px; margin: 0; padding: 5px;" align="left" valign="top"><a href="http://www.refresh-ministries.org/coaching" style="color: #3AB54A !important; text-decoration: none;">ReFresh Coaching »</a></td>
                         </tr>
                       </table>
                       <hr style="color: #d9d9d9; height: 1px; background: #d9d9d9; border: none;" />
                       <table style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; padding: 0;">
                         <tr style="vertical-align: top; text-align: left; padding: 0;" align="left">
-                          <td style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; color: #222222; font-family: 'Helvetica', 'Arial', sans-serif; font-weight: normal; line-height: 19px; font-size: 14px; margin: 0; padding: 5px;" align="left" valign="top"><a href="http://www.refresh-ministries.org/leadership" style="color: #3AB54A !important; text-decoration: none;">Leadership »</a></td>
+                          <td style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; color: #222222; font-family: 'Helvetica', 'Arial', sans-serif; font-weight: normal; line-height: 19px; font-size: 14px; margin: 0; padding: 5px;" align="left" valign="top"><a href="http://www.refresh-ministries.org/leadership" style="color: #3AB54A !important; text-decoration: none;">Leadership Nuggets »</a></td>
                         </tr>
                       </table>
                       <hr style="color: #d9d9d9; height: 1px; background: #d9d9d9; border: none;" />
@@ -487,10 +487,12 @@
                       <br />
                       <h6 style="color: #3AB54A; font-family: 'Helvetica', 'Arial', sans-serif; font-weight: normal; text-align: left; line-height: 1.3; word-break: normal; font-size: 20px; margin: 0 0 5px; padding: 0;" align="left">Contact Info:</h6>
                       <p style="color: #222222; font-family: 'Helvetica', 'Arial', sans-serif; font-weight: normal; text-align: left; line-height: 19px; font-size: 14px; margin: 0 0 10px; padding: 0;" align="left">
-                        Phone: <a href="tel:555-555-5555" style="color: #3AB54A !important; text-decoration: none;">(555) 555-5555</a>
+                        Email: <a href="mailto:contact@refresh-ministries.org" style="color: #3AB54A !important; text-decoration: none;">contact@refresh-ministries.org</a>
                       </p>
                       <p style="color: #222222; font-family: 'Helvetica', 'Arial', sans-serif; font-weight: normal; text-align: left; line-height: 19px; font-size: 14px; margin: 0 0 10px; padding: 0;" align="left">
-                        Email: <a href="mailto:contact@refresh-ministries.org" style="color: #3AB54A !important; text-decoration: none;">contact@refresh-ministries.org</a>
+                        Address: <span style="color: #3AB54A;">15841 Alta Vista Way
+                          <br />
+                          San Jose, CA 95127</span>
                       </p></td>
                       <td class="expander" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; visibility: hidden; width: 0px; color: #222222; font-family: 'Helvetica', 'Arial', sans-serif; font-weight: normal; line-height: 19px; font-size: 14px; margin: 0; padding: 0;" align="left" valign="top"></td>
                     </tr>
