--- a/app/views/message_mailer/thankyou_email.html.erb
+++ b/app/views/message_mailer/thankyou_email.html.erb
@@ -434,7 +434,7 @@
                       <p style="color: #222222; font-family: 'Helvetica', 'Arial', sans-serif; font-weight: normal; text-align: left; line-height: 19px; font-size: 14px; margin: 0 0 10px; padding: 0;" align="left">
                         Telephone: <a href="tel:<%= @user.telephone %>" style="color: #3AB54A !important; text-decoration: none;"><%= @user.telephone %></a>
                       </p>
-                      <%= raw @user.telephone %>
+                      <%= raw @user.memo %>
                       </td>
                       <td class="expander" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; visibility: hidden; width: 0px; color: #222222; font-family: 'Helvetica', 'Arial', sans-serif; font-weight: normal; line-height: 19px; font-size: 14px; margin: 0; padding: 0;" align="left" valign="top"></td>
                     </tr>
